--- a/references.bib
+++ b/references.bib
@@ -12,6 +12,17 @@
   volume = {9},
   number = {3}}
 
+@article{kmeans,
+  author = {Stuart Lloyd},
+  title = {Least square quantization in {PCM}},
+  journal = {IEEE Transactions on Information Theory},
+  year = {1982},
+  volume = {28},
+  number = {2},
+  pages = {129--137},
+  note = {Originally released as a Bell Telephone Laboratories Paper in 1957}}
+
+
 @book{forwarddraper,
   author = {Norman Draper and Harry Smith},
   year = {1966},
