added refs for knn

--- a/references.bib
+++ b/references.bib
@@ -4,6 +4,21 @@
   year = {1966},
   booktitle = {Eastern Regional Meetings of the Institute of Mathematical Statistics}}
 
+@techreport{knnfix,
+  author = {Evelyn Fix and Joseph Hodges},
+  year = {1951},
+  title = {Discriminatory analysis. Nonparametric discrimination: consistency properties},
+  institution = {USAF School of Aviation Medicine, Randolph Field, Texas}}
+ 
+@article{knncover,
+  author = {Thomas Cover and Peter Hart},
+  title = {Nearest neighbor pattern classification},
+  year = {1967},
+  journal = {IEEE Transactions on Information Theory},
+  volume = {13},
+  number = {1},
+  pages = {21--27}}
+
 @article{penguinpaper,
   title = {Ecological sexual dimorphism and environmental variability within a community of {A}ntarctic penguins (genus \emph{Pygoscelis})},
   year = {2014},
