minor cleanup where for loops are reffed

--- a/classification2.Rmd
+++ b/classification2.Rmd
@@ -1273,9 +1273,9 @@ Finally, we need to write some code that performs the task of sequentially
 finding the best predictor to add to the model.
 If you recall the end of the wrangling chapter, we mentioned
 that sometimes one needs more flexible forms of iteration than what 
-we have used earlier, and in these cases, one typically resorts to
-a *for loop*; see [the chapter on "iteration"](https://r4ds.had.co.nz/iteration.html) in @wickham2016r.
-This is one of those cases! Here we will use two for loops:
+we have used earlier, and in these cases one typically resorts to
+a *for loop*; see [the chapter on iteration](https://r4ds.had.co.nz/iteration.html) in *R for Data Science* [@wickham2016r].
+Here we will use two for loops:
 one over increasing predictor set sizes 
 (where you see `for (i in 1:length(names))` below),
 and another to check which predictor to add in each round (where you see `for (j in 1:length(names))` below).
