--- a/classification2.Rmd
+++ b/classification2.Rmd
@@ -1172,7 +1172,7 @@ this chapter to find out where you can learn more about variable selection, incl
 The first idea you might think of for a systematic way to select predictors
 is to try all possible subsets of predictors and then pick the set that results in the "best" classifier.
 This procedure is indeed a well-known variable selection method referred to 
-as *best subset selection* [@bealesubset][@hockingsubset]. \index{variable selection!best subset}\index{predictor selection|see{variable selection}}
+as *best subset selection* [@bealesubset; @hockingsubset]. \index{variable selection!best subset}\index{predictor selection|see{variable selection}}
 In particular, you
 
 1. create a separate model for every possible subset of predictors,
@@ -1194,7 +1194,7 @@ So although it is a simple method, best subset selection is usually too computat
 expensive to use in practice.
 
 Another idea is to iteratively build up a model by adding one predictor variable 
-at a time. This method&mdash;known as *forward selection* [@forwardefroymson][@forwarddraper]&mdash;is also widely \index{variable selection!forward}
+at a time. This method&mdash;known as *forward selection* [@forwardefroymson; @forwarddraper]&mdash;is also widely \index{variable selection!forward}
 applicable and fairly straightforward. It involves the following steps:
 
 1. Start with a model having no predictors.
