--- a/regression1.Rmd
+++ b/regression1.Rmd
@@ -76,7 +76,7 @@ numerical, and so predicting them given past data is considered a regression pro
 Just like in the \index{classification!comparison to regression} 
 classification setting, there are many possible methods that we can use 
 to predict numerical response variables. In this chapter we will
-focus on the **K-nearest neighbors** algorithm [@knnfix][@knncover], and in the next chapter
+focus on the **K-nearest neighbors** algorithm [@knnfix; @knncover], and in the next chapter
 we will study **linear regression**.
 In your future studies, you might encounter regression trees, splines,
 and general local regression methods; see the additional resources
