--- a/wrangling.Rmd
+++ b/wrangling.Rmd
@@ -1633,7 +1633,7 @@ found in Chapter \@ref(move-to-your-own-machine).
     (`select`, `filter`, `mutate`, `arrange`, `summarize`, and `group_by`). 
     To learn more about these functions and meet a few more useful
     functions, we recommend you check out [this
-    chapter](http://stat545.com/block010_dplyr-end-single-table.html#where-were-we)
+    chapter](https://stat545.com/block010_dplyr-end-single-table.html#where-were-we)
     of the data wrangling, exploration, and analysis with R book.
   - The [`dplyr` page on the Tidyverse website](https://dplyr.tidyverse.org/) is
     another resource to learn more about the functions in this
