minor capitalization fix in url

--- a/inference.Rmd
+++ b/inference.Rmd
@@ -120,7 +120,7 @@ focus on two settings:
 
 ### Sampling distributions for proportions
 We will look at an example using data from 
-[Inside Airbnb](http://insideAirbnb.com/) [@insideairbnb]. Airbnb \index{Airbnb} is an online
+[Inside Airbnb](http://insideairbnb.com/) [@insideairbnb]. Airbnb \index{Airbnb} is an online
 marketplace for arranging vacation rentals and places to stay. The data set
 contains listings for Vancouver, Canada, in September 2020. Our data
 includes an ID number, neighborhood, type of room, the number of people the
