cleaning up additional resources reading wrangling

--- a/references.bib
+++ b/references.bib
@@ -364,3 +364,33 @@
   publisher={CRC Press},
   url = {https://adv-r.hadley.nz/}
 }
+
+@Manual{here,
+  title = {{here R package}},
+  author = {Kirill M\"uller},
+  year = {2020},
+  url = {https://here.r-lib.org/}}
+
+@Manual{rio,
+  title = {{rio R package}},
+  author = {Thomas Leeper},
+  year = {2021},
+  url = {https://cloud.r-project.org/web/packages/rio/index.html}}
+
+@Manual{polite,
+  title = {{polite R package}},
+  author = {Dmytro Perepolkin},
+  year = {2021},
+  url = {https://dmi3kno.github.io/polite/}}
+
+@Manual{dplyr,
+  title = {{dplyr R package}},
+  author = {Hadley Wickham and Romain Fran\c{c}ois and Lionel Henry and Kirill M\"uller},
+  year = {2021},
+  url = {https://dplyr.tidyverse.org/}}
+
+@Manual{tidyselect,
+  title = {{tidyselect R package}},
+  author = {Lionel Henry and Hadley Wickham},
+  year = {2021},
+  url = {https://tidyselect.r-lib.org/}}
