cleaned additional res in viz; fixed minor errors in intro

--- a/intro.Rmd
+++ b/intro.Rmd
@@ -220,7 +220,7 @@ before you can use it. The place from which we will load it is called an R *pack
 An R package \index{package} is a collection of functions that can be used in addition to the
 built-in R package functions once loaded. The `read_csv` function, in
 particular, can be made accessible by loading 
-[the `tidyverse` R package](https://tidyverse.tidyverse.org/) [@tidyverse,@wickham2019tidverse]
+[the `tidyverse` R package](https://tidyverse.tidyverse.org/) [@tidyverse; @wickham2019tidverse]
 using the `library` function. \index{library} The `tidyverse` \index{tidyverse} package contains many
 functions that we will use throughout this book to load, clean, wrangle, 
 and visualize data. 
