--- a/references.bib
+++ b/references.bib
@@ -394,3 +394,24 @@
   author = {Lionel Henry and Hadley Wickham},
   year = {2021},
   url = {https://tidyselect.r-lib.org/}}
+
+@Manual{ggplot,
+  title = {{ggplot2 R package}},
+  author = {Hadley Wickham and Winston Chang and Lionel Henry and Thomas Lin Pederson and Kohske Takahashi and Claus Wilke and Kara Woo and Hiroaki Yutani and Dewey Dunnington},
+  year = {2021},
+  url = {https://ggplot2.tidyverse.org/}}
+
+@Manual{lubridate,
+  title = {{lubridate R package}},
+  author = {Vitalie Spinu and Garrett Grolemund and Hadley Wickham},
+  year = {2021},
+  url = {https://lubridate.tidyverse.org/}}
+
+@article{lubridatepaper,
+  title = {Dates and times made easy with {lubridate}},
+  author = {Garrett Grolemund and Hadley Wickham},
+  year = {2011},
+  journal = {Journal of Statistical Software},
+  volume = {40},
+  number = {3},
+  pages = {1--25}}
