--- a/viz.Rmd
+++ b/viz.Rmd
@@ -384,7 +384,7 @@ Note that it is important that the vector given to `xlim` must be of the same
 type as the data that is mapped to that axis. 
 Here, we have mapped a date to the x-axis, 
 and so we need to use the `date` function 
-(from the `tidyverse` `lubridate` R package) 
+(from the `tidyverse` [`lubridate` R package](https://lubridate.tidyverse.org/) [@lubridate; @lubridatepaper]) 
 to convert the character strings we provide to `c` to `date` vectors.
 
 > **Note:** `lubridate` is a package that is installed by the `tidyverse` metapackage,
@@ -1517,15 +1517,26 @@ please follow the instructions for computer setup needed to run the worksheets
 found in Chapter \@ref(move-to-your-own-machine).
 
 ## Additional resources
-- The [`ggplot2` page on the Tidyverse website](https://ggplot2.tidyverse.org) is where you should look if you want to learn more about the functions in this chapter, the full set of arguments you can use, and other related functions. The site also provides a very nice cheat sheet that summarizes many of the data wrangling functions from this chapter.
-- The [Fundamentals of Data Visualization](https://clauswilke.com/dataviz/) has a wealth of information on designing effective visualizations. It is not specific to any particular programming language or library. If you want to improve your visualization skills, this is the next place to look.
-- [*R for Data Science*](https://r4ds.had.co.nz/) has a chapter on [creating visualizations using `ggplot2`](https://r4ds.had.co.nz/data-visualisation.html). This reference is specific to R and `ggplot2`, but provides a much more detailed introduction to the full set of tools that `ggplot2` provides. This chapter is where you should look if you want to learn how to make more intricate visualizations in `ggplot2` than what is included in this chapter.
+- The [`ggplot2` R package page](https://ggplot2.tidyverse.org) [@ggplot] is
+  where you should look if you want to learn more about the functions in this
+  chapter, the full set of arguments you can use, and other related functions.
+  The site also provides a very nice cheat sheet that summarizes many of the data
+  wrangling functions from this chapter.
+- The *Fundamentals of Data Visualization* [@wilkeviz] has
+  a wealth of information on designing effective visualizations. It is not
+  specific to any particular programming language or library. If you want to
+  improve your visualization skills, this is the next place to look.
+- *R for Data Science* [@wickham2016r] has a [chapter on creating visualizations using
+  `ggplot2`](https://r4ds.had.co.nz/data-visualisation.html). This reference is
+  specific to R and `ggplot2`, but provides a much more detailed introduction to
+  the full set of tools that `ggplot2` provides. This chapter is where you should
+  look if you want to learn how to make more intricate visualizations in
+  `ggplot2` than what is included in this chapter.
 - The [`theme` function documentation](https://ggplot2.tidyverse.org/reference/theme.html)
-is an excellent reference to see how you can fine tune the non-data aspects 
-of your visualization.
-- [*R for Data Science*](https://r4ds.had.co.nz/) has a chapter on 
-[dates and times](https://r4ds.had.co.nz/dates-and-times.html). 
-This chapter is where you should look if you want to learn about `date` vectors,
-including how to create them, 
-and how to use them to effectively handle durations, periods and intervals
-using the `lubridate` package.
+  is an excellent reference to see how you can fine tune the non-data aspects 
+  of your visualization.
+- *R for Data Science* has a chapter on [dates and
+  times](https://r4ds.had.co.nz/dates-and-times.html).  This chapter is where
+  you should look if you want to learn about `date` vectors, including how to
+  create them, and how to use them to effectively handle durations, periods and
+  intervals using the `lubridate` package.
