remaining additional resource sections

--- a/jupyter.Rmd
+++ b/jupyter.Rmd
@@ -419,10 +419,11 @@ files using lower case characters and separating words by a dash (`-`) or an
 underscore (`_`).
 
 ## Additional resources
-- The [JupyterLab Documentation](https://jupyterlab.readthedocs.io/en/latest/) is a good
-next place to look for more information about working in Jupyter notebooks. This documentation
-goes into significantly more detail about all of the topics we covered in this chapter, and
-covers more advanced topics as well.
-- If you are keen to learn about the Markdown language for rich text formatting, two good places to 
-start are [this Markdown cheatsheet](https://commonmark.org/help/)
-and [Markdown tutorial](https://commonmark.org/help/tutorial/), both provided by CommonMark.
+- The [JupyterLab Documentation](https://jupyterlab.readthedocs.io/en/latest/)
+  is a good next place to look for more information about working in Jupyter
+  notebooks. This documentation goes into significantly more detail about all of
+  the topics we covered in this chapter, and covers more advanced topics as well.
+- If you are keen to learn about the Markdown language for rich text
+  formatting, two good places to start are CommonMark's [Markdown
+  cheatsheet](https://commonmark.org/help/) and [Markdown
+  tutorial](https://commonmark.org/help/tutorial/).
