--- a/references.bib
+++ b/references.bib
@@ -349,6 +349,13 @@
   url = {https://stanfordhealthcare.org/medical-conditions/cancer/cancer.html}
 }
 
+@book{moderndive,
+  title={Statistical Inference via Data Science: A {M}odern{D}ive into {R} and the {T}idyverse},
+  author = {Chester Ismay and Albert Kim},
+  year = {2020},
+  publisher = {Chapman and Hall/CRC Press},
+  url = {https://moderndive.com/}}
+
 @book{wickham2016r,
   title={R for Data Science: Import, Tidy, Transform, Visualize, and Model Data},
   author={Wickham, Hadley and Grolemund, Garrett},
@@ -415,3 +422,10 @@
   volume = {40},
   number = {3},
   pages = {1--25}}
+
+@book{openintro,
+  title = {OpenIntro Statistics},
+  author = {David Diez and Mine \c{C}etinkaya-Rundel and Christopher Barr},
+  year = {2019},
+  publisher = {OpenIntro, Inc.},
+  url = {https://openintro.org/book/os/}}
