--- a/version-control.Rmd
+++ b/version-control.Rmd
@@ -940,8 +940,22 @@ found in Chapter \@ref(move-to-your-own-machine).
 Now that you've picked up the basics of version control with Git and GitHub, 
 you can expand your knowledge through the resources listed below:
 
-- GitHub's [guides website](https://guides.github.com/) and [YouTube channel](https://www.youtube.com/githubguides),
-and [*Happy Git with R*](https://happygitwithr.com/) are great resources to take the next steps in learning about Git and GitHub.
-- [Good enough practices in scientific computing](https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1005510#sec014) [-@wilson2014best] provides more advice on useful workflows and "good enough" practices in data analysis projects.
-- In addition to [GitHub](https://github.com), there are other popular Git repository hosting services such as [GitLab](https://gitlab.com) and  [BitBucket](https://bitbucket.org). Comparing all of these options is beyond the scope of this book, and until you become a more advanced user, you are perfectly fine to just stick with GitHub. Just be aware that you have options!
-- [GitHub's documentation on creating a personal access token](https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/creating-a-personal-access-token) and the *Happy Git with R* [cache credentials for HTTPS](https://happygitwithr.com/credential-caching.html) chapter are both excellent additional resources to consult if you need additional help generating and using personal access tokens.
+- GitHub's [guides website](https://guides.github.com/) and [YouTube
+  channel](https://www.youtube.com/githubguides), and [*Happy Git and GitHub 
+  for the useR*](https://happygitwithr.com/) are great resources to take the next steps in
+  learning about Git and GitHub.
+- [Good enough practices in scientific
+  computing](https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1005510#sec014)
+  [@wilson2014best] provides more advice on useful workflows and "good enough"
+  practices in data analysis projects.
+- In addition to [GitHub](https://github.com), there are other popular Git
+  repository hosting services such as [GitLab](https://gitlab.com) and
+  [BitBucket](https://bitbucket.org). Comparing all of these options is beyond
+  the scope of this book, and until you become a more advanced user, you are
+  perfectly fine to just stick with GitHub. Just be aware that you have options!
+- GitHub's [documentation on creating a personal access
+  token](https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/creating-a-personal-access-token)
+  and the *Happy Git and GitHub for the useR* 
+  [personal access tokens chapter](https://happygitwithr.com/https-pat.html) are both
+  excellent additional resources to consult if you need additional help
+  generating and using personal access tokens.
