--- a/viz.Rmd
+++ b/viz.Rmd
@@ -1535,7 +1535,7 @@ found in Chapter \@ref(move-to-your-own-machine).
 - The [`theme` function documentation](https://ggplot2.tidyverse.org/reference/theme.html)
   is an excellent reference to see how you can fine tune the non-data aspects 
   of your visualization.
-- *R for Data Science* has a chapter on [dates and
+- *R for Data Science* [@wickham2016r] has a chapter on [dates and
   times](https://r4ds.had.co.nz/dates-and-times.html).  This chapter is where
   you should look if you want to learn about `date` vectors, including how to
   create them, and how to use them to effectively handle durations, periods and
