fixed mlee comments on PR

--- a/intro.Rmd
+++ b/intro.Rmd
@@ -337,8 +337,7 @@ the words in a name.  R is case sensitive, which means that `Letter` and
 objects meaningful names.  For instance, you *can* name a data frame `x`.
 However, using more meaningful terms, such as `language_data`, will help you
 remember what each name in your code represents.  We recommend following the
-Tidyverse naming conventions outlined in  
-the *Tidyverse Style Guide* [@tidyversestyleguide].  Let's 
+Tidyverse naming conventions outlined in the *Tidyverse Style Guide* [@tidyversestyleguide].  Let's
 now use the assignment symbol to give the name
 `can_lang` to the 2016 Canadian census language data frame that we get from
 `read_csv`. 
