--- a/reading.Rmd
+++ b/reading.Rmd
@@ -1098,9 +1098,8 @@ of accessing data through an API in this book, with the hope that it gives you e
 idea that you can learn how to use another API if needed.
 
 In particular, in this book we will show you the basics of how to use
-the `rtweet` package in R
-\index{API!rtweet}\index{rtweet}\index{Twitter} 
-to access data from the Twitter API. One nice feature of this particular 
+the `rtweet` package in R\index{API!rtweet}\index{rtweet}\index{Twitter} to access
+data from the Twitter API. One nice feature of this particular 
 API is that you don't need  a special *token* \index{API!token} to access it; you simply need to 
 make an account with them. Your access to the data will then be authenticated and controlled through
 your account username and password. If you have a Twitter 
