--- a/wrangling.Rmd
+++ b/wrangling.Rmd
@@ -1639,7 +1639,7 @@ found in Chapter \@ref(move-to-your-own-machine).
   chapter, the full set of arguments you can use, and other related functions.
   The site also provides a very nice cheat sheet that summarizes many of the
   data wrangling functions from this chapter.
-- Check out the [`tidyselect` R package page](https://tidyselect.r-lib.org/reference/select_helpers.html) 
+- Check out the [`tidyselect` R package page](https://tidyselect.r-lib.org/index.html)
   [@tidyselect] for a comprehensive list of `select` helpers. 
   These helpers can be used to choose columns in a data frame when paired with  the `select` function 
   (and other functions that use the `tidyselect` syntax, such as `pivot_longer`).
