--- a/setup.Rmd
+++ b/setup.Rmd
@@ -152,19 +152,19 @@ or terminal (MacOS and Ubuntu) and press enter:
 
 ```
 conda install -c conda-forge -y \
-  r-cowplot \
-  r-ggally \
-  r-gridextra \
-  r-kknn \
-  r-rodbc \
-  r-rpostgres \
-  r-rsqlite \
-  r-scales \
-  r-testthat \
-  r-tidymodels \
-  r-tidyverse \
-  r-tinytex \
-  unixodbc
+  r-cowplot=1.1.* \
+  r-ggally=2.1.* \
+  r-gridextra=2.3 \
+  r-kknn1.3.* \
+  r-rodbc=1.* \
+  r-rpostgres=1.3.* \
+  r-rsqlite=2.2.* \
+  r-scales=1.1.* \
+  r-testthat=2.3.2 \
+  r-tidymodels=0.1.* \
+  r-tidyverse=1.3.* \
+  r-tinytex=0.33 \
+  unixodbc=2.3.*
 ```
 
 ### LaTeX
