--- a/setup.Rmd
+++ b/setup.Rmd
@@ -156,11 +156,10 @@ conda install -c conda-forge -y \
   r-ggally=2.1.* \
   r-gridextra=2.3 \
   r-kknn1.3.* \
-  r-rodbc=1.* \
-  r-rpostgres=1.3.* \
+  r-rpostgres=1.2.* \
   r-rsqlite=2.2.* \
   r-scales=1.1.* \
-  r-testthat=2.3.2 \
+  r-testthat=3.0.* \
   r-tidymodels=0.1.* \
   r-tidyverse=1.3.* \
   r-tinytex=0.33 \
