--- a/setup.Rmd
+++ b/setup.Rmd
@@ -129,7 +129,7 @@ To install these, type the following into
 the Anaconda Prompt (Windows) or terminal (MacOS and Ubuntu):
 
 ```
-conda install -c conda-forge -y r-base">=4.1.1"
+conda install -c conda-forge -y r-base=4.1.1
 conda install -c conda-forge -y r-irkernel
 ```
 
@@ -155,7 +155,7 @@ conda install -c conda-forge -y \
   r-cowplot=1.1.* \
   r-ggally=2.1.* \
   r-gridextra=2.3 \
-  r-kknn1.3.* \
+  r-kknn=1.3.* \
   r-rpostgres=1.2.* \
   r-rsqlite=2.2.* \
   r-scales=1.1.* \
