--- a/acknowledgements.Rmd
+++ b/acknowledgements.Rmd
@@ -14,9 +14,10 @@ of both DSCI 100 and this book. His door was always open when
 we needed to chat about how to best introduce and teach data science to our first-year students.
 
 We would also like to thank all those who contributed to the process of 
-publishing this book. In particular, we would like to thank all of our reviewers
-for their feedback and suggestions; the book was improved substantially
-by their insights. We would like to give special thanks to Jim Zidek
+publishing this book. In particular, we would like to thank all of our reviewers for their feedback and suggestions:
+Rohan Alexander, Isabella Ghement, Albert Kim, Adam Loy, ‪Maria Prokofieva, Emily Riderier and Greg Wilson.
+The book was improved substantially by their insights.
+We would like to give special thanks to Jim Zidek
 for his support and encouragement throughout the process, and to
 Roger Peng for graciously offering to write the foreword.
 
