--- a/acknowledgements.Rmd
+++ b/acknowledgements.Rmd
@@ -15,7 +15,7 @@ we needed to chat about how to best introduce and teach data science to our firs
 
 We would also like to thank all those who contributed to the process of 
 publishing this book. In particular, we would like to thank all of our reviewers for their feedback and suggestions:
-Rohan Alexander, Isabella Ghement, Virgilio Gómez Rubio, Albert Kim, Adam Loy, Maria Prokofieva, Emily Riederer and Greg Wilson.
+Rohan Alexander, Isabella Ghement, Virgilio Gómez Rubio, Albert Kim, Adam Loy, Maria Prokofieva, Emily Riederer, and Greg Wilson.
 The book was improved substantially by their insights.
 We would like to give special thanks to Jim Zidek
 for his support and encouragement throughout the process, and to
