--- a/setup.Rmd
+++ b/setup.Rmd
@@ -121,17 +121,55 @@ tab in your default browser with the JupyterLab interface. To exit out of
 JupyterLab you can click `File -> Shutdown`, or go to the terminal from which 
 you launched JupyterLab, hold `Ctrl`, and press `C` twice.
 
-### R and the IRkernel
+### R, R packages and the IRkernel 
 
-To have R \index{R!installation} available to you in JupyterLab, 
-you will need to install the R programming language and the \index{kernel!installation} IRkernel R package. 
-To install these, type the following into 
-the Anaconda Prompt (Windows) or terminal (MacOS and Ubuntu):
+To have R \index{R!installation} 
+and the R packages used in this book available to you in JupyterLab, 
+you will need to install the R programming language,
+several R packages,
+and the \index{kernel!installation} IRkernel R package.
+
+To install these 
+using the same versions used in the exercise worksheets that accompany the book, 
+type the command shown below into the Anaconda Prompt (Windows) 
+or terminal (MacOS and Ubuntu). 
+This command installs specific R and R package versions specified in
+this [`environment.yml` file](https://raw.githubusercontent.com/UBC-DSCI/data-science-a-first-intro-worksheets/main/environment.yml).
+We will always keep the versions in this `environment.yml` file
+consistent with the R and R package versions 
+used in the exercise worksheets that accompany the book.
 
 ```
-conda install -c conda-forge -y r-base=4.1.1
-conda install -c conda-forge -y r-irkernel
+conda env update --file https://raw.githubusercontent.com/UBC-DSCI/data-science-a-first-intro-worksheets/main/environment.yml
 ```
+
+> You can also install the latest version of R 
+> and the R packages used in this book by typing the commands shown below 
+> in the Anaconda Prompt (Windows) 
+> or terminal (MacOS and Ubuntu) and pressing enter.
+> Note that this may install a different version of the packages 
+> than were used in the exercise worksheets that accompany the book,
+> which may lead to some incompatibilities between the code run 
+> and the automated exercise worksheet feedback.
+> 
+> 
+> ```
+> conda install -c conda-forge -y \
+>   r-base \
+>   r-cowplot \
+>   r-ggally \
+>   r-gridextra \
+>   r-irkernel \
+>   r-kknn \
+>   r-rpostgres \
+>   r-rsqlite \
+>   r-scales \
+>   r-testthat \
+>   r-tidymodels \
+>   r-tidyverse \
+>   r-tinytex \
+>   unixodbc
+> ```
 
 To improve the experience of using R in JupyterLab, we will add an extension 
 that allows us to set up keyboard shortcuts for inserting text.
@@ -142,28 +180,6 @@ or terminal (MacOS and Ubuntu) and press  enter:
 
 ```
 jupyter labextension install @techrah/text-shortcuts
-```
-
-### R packages
-
-To install the packages \index{package} used in this book, 
-type the following in the Anaconda Prompt (Windows) 
-or terminal (MacOS and Ubuntu) and press enter:
-
-```
-conda install -c conda-forge -y \
-  r-cowplot=1.1.* \
-  r-ggally=2.1.* \
-  r-gridextra=2.3 \
-  r-kknn=1.3.* \
-  r-rpostgres=1.2.* \
-  r-rsqlite=2.2.* \
-  r-scales=1.1.* \
-  r-testthat=3.0.* \
-  r-tidymodels=0.1.* \
-  r-tidyverse=1.3.* \
-  r-tinytex=0.33 \
-  unixodbc=2.3.*
 ```
 
 ### LaTeX
