polishing new setup chapter

--- a/setup.Rmd
+++ b/setup.Rmd
@@ -121,38 +121,43 @@ tab in your default browser with the JupyterLab interface. To exit out of
 JupyterLab you can click `File -> Shutdown`, or go to the terminal from which 
 you launched JupyterLab, hold `Ctrl`, and press `C` twice.
 
-### R, R packages and the IRkernel 
+To improve the experience of using R in JupyterLab, we will add an extension 
+that allows us to set up keyboard shortcuts for inserting text.
+By default, 
+this extension creates shortcuts for inserting two of the most common R 
+operators: `<-` and `|>`. Type the following in the Anaconda Prompt (Windows)
+or terminal (MacOS and Ubuntu) and press  enter:
 
-To have R \index{R!installation} 
-and the R packages used in this book available to you in JupyterLab, 
+```
+jupyter labextension install @techrah/text-shortcuts
+```
+
+### R, R packages, and the IRkernel 
+
+To have the software \index{R!installation} used in this book available to you in JupyterLab, 
 you will need to install the R programming language,
 several R packages,
-and the \index{kernel!installation} IRkernel R package.
-
-To install these 
-using the same versions used in the exercise worksheets that accompany the book, 
+and the \index{kernel!installation} IRkernel.
+To install versions of these that are compatible with the accompanying worksheets, 
 type the command shown below into the Anaconda Prompt (Windows) 
 or terminal (MacOS and Ubuntu). 
-This command installs specific R and R package versions specified in
-this [`environment.yml` file](https://raw.githubusercontent.com/UBC-DSCI/data-science-a-first-intro-worksheets/main/environment.yml).
-We will always keep the versions in this `environment.yml` file
-consistent with the R and R package versions 
-used in the exercise worksheets that accompany the book.
-
 ```
 conda env update --file https://raw.githubusercontent.com/UBC-DSCI/data-science-a-first-intro-worksheets/main/environment.yml
 ```
+This command installs the specific R and package versions specified in
+the `environment.yml` file found in 
+[the worksheets repository](https://ubc-dsci.github.io/data-science-a-first-intro-worksheets).
+We will always keep the versions in the `environment.yml` file updated
+so that they are compatible with the exercise worksheets that accompany the book.
 
-> You can also install the latest version of R 
+> You can also install the *latest* version of R 
 > and the R packages used in this book by typing the commands shown below 
 > in the Anaconda Prompt (Windows) 
 > or terminal (MacOS and Ubuntu) and pressing enter.
-> Note that this may install a different version of the packages 
-> than were used in the exercise worksheets that accompany the book,
-> which may lead to some incompatibilities between the code run 
-> and the automated exercise worksheet feedback.
-> 
-> 
+> **Be careful though:** this may install package versions that are
+> incompatible with the worksheets that accompany the book; the automated
+> exercise feedback might tell you your answers are not correct even though
+> they are!
 > ```
 > conda install -c conda-forge -y \
 >   r-base \
@@ -170,17 +175,6 @@ conda env update --file https://raw.githubusercontent.com/UBC-DSCI/data-science-
 >   r-tinytex \
 >   unixodbc
 > ```
-
-To improve the experience of using R in JupyterLab, we will add an extension 
-that allows us to set up keyboard shortcuts for inserting text.
-By default, 
-this extension creates shortcuts for inserting two of the most common R 
-operators: `<-` and `|>`. Type the following in the Anaconda Prompt (Windows)
-or terminal (MacOS and Ubuntu) and press  enter:
-
-```
-jupyter labextension install @techrah/text-shortcuts
-```
 
 ### LaTeX
 
@@ -247,8 +241,10 @@ to save and close the file.
 
 It is good practice to restart all the programs you used when installing this
 software stack before you proceed to doing your data analysis.
+This includes restarting JupyterLab as well as the terminal (MacOS and Ubuntu) 
+or the Anaconda Prompt (Windows).
 This will ensure all the software and settings you put in place are 
-correctly sourced. This includes JupyterLab, terminal or Anaconda Prompt.
+correctly sourced. 
 
 ## Downloading the worksheets for this book
 
