--- a/foreward-text.Rmd
+++ b/foreward-text.Rmd
@@ -34,8 +34,8 @@ conducting data analysis, in large part because of the vast toolchain implemente
 Tidyverse collection of R packages. The second key concept is the development of workflows
 for reproducible and auditable data analyses. Modern data analyses have only grown in
 complexity due to the availability of data and the ease with which we can implement complex
-data analysis procedures. Furthermore, these data analyses are often part of decision-
-making processes that may have significant impacts on people and communities. Therefore,
+data analysis procedures. Furthermore, these data analyses are often part of 
+decision-making processes that may have significant impacts on people and communities. Therefore,
 there is a critical need to build reproducible analyses that can be studied and repeated by
 others in a reliable manner. Statistical methods clearly represent an important element
 of data science for building prediction and classification models and for making inferences
