--- a/foreward-text.Rmd
+++ b/foreward-text.Rmd
@@ -21,7 +21,7 @@ discussion amongst a broad community of researchers and practitioners and there 
 not appear to be much consensus to date. However, there seems a general understanding
 that data science focuses on the more “active” elements—data wrangling, cleaning, and
 analysis—of answering questions with data. These elements are often highly problem-
-specific and may seem difficult to generalize across applications. Nevertheless, over time we
+problem-specific and may seem difficult to generalize across applications. Nevertheless, over time we
 have seen some core elements emerge that appear to repeat themselves as useful concepts
 across different problems. Given the lack of clear agreement over the definition of data
 science, there is a strong need for a book like this one to propose a vision for what the field
