--- a/foreward-text.Rmd
+++ b/foreward-text.Rmd
@@ -43,7 +43,7 @@ about unobserved populations. Finally, because a field can succeed only if it fo
 active and collaborative community, it has become clear that being fluent in the tools of
 collaboration is a core element of data science.
 
-This book takes these core concepts and focuses on how one can apply them to do data
+This book takes these core concepts and focuses on how one can apply them to *do* data
 science in a rigorous manner. Students who learn from this book will be well-versed in
 the techniques and principles behind producing reliable evidence from data. This book is
 centered around the use of the R programming language within the tidy data framework,
