--- a/index.Rmd
+++ b/index.Rmd
@@ -34,7 +34,7 @@ output:
 
 ---
 
-```{r preface, child="foreward-text.Rmd"}
+```{r preface, child="foreword-text.Rmd"}
 ```
 
 ```{r preface, child="preface-text.Rmd"}
