--- a/pdf/index.Rmd
+++ b/pdf/index.Rmd
@@ -28,7 +28,7 @@ knitr::opts_chunk$set(fig.pos = "H",
 
 ```
 
-```{r preface, child="foreward-text.Rmd"}
+```{r preface, child="foreword-text.Rmd"}
 ```
 
 ```{r preface, child="preface-text.Rmd"}
