--- a/foreward-text.Rmd
+++ b/foreward-text.Rmd
@@ -15,7 +15,7 @@ reader should be inclined to ask, ”What is the unique contribution of this boo
 to answer that question it is useful to step back for a moment and consider the development
 of the field of data science over the past few years.
 
-When thinking about data science, it is important to consider two questions: “What is
+When thinking about data science, it is important to consider two questions: "What is
 data science?" and "How should one do data science?" The former question is under active
 discussion amongst a broad community of researchers and practitioners and there does
 not appear to be much consensus to date. However, there seems a general understanding
