--- a/foreward-text.Rmd
+++ b/foreward-text.Rmd
@@ -11,7 +11,7 @@ attracting excitement and interest from many different directions. The demand fo
 educational materials has grown concurrently with the growth of the field itself, leading to
 a proliferation of textbooks, courses, blog posts, and tutorials. This book is an important
 contribution to this fast-growing literature, but given the wide availability of materials, a
-reader should be inclined to ask, ”What is the unique contribution of this book?” In order
+reader should be inclined to ask, "What is the unique contribution of *this* book?" In order
 to answer that question it is useful to step back for a moment and consider the development
 of the field of data science over the past few years.
 
