--- a/foreward-text.Rmd
+++ b/foreward-text.Rmd
@@ -1,10 +1,10 @@
 # Foreword {-}
 
-Roger D. Peng
+*Roger D. Peng*
 
 *Johns Hopkins Bloomberg School of Public Health*
 
-January 4, 2022
+*2022-01-04*
 
 The field of data science has expanded and grown significantly in recent years, 
 attracting excitement and interest from many different directions. The demand for introductory
