emdash as &mdash;

--- a/foreword-text.Rmd
+++ b/foreword-text.Rmd
@@ -19,7 +19,7 @@ When thinking about data science, it is important to consider two questions: "Wh
 data science?" and "How should one do data science?" The former question is under active
 discussion amongst a broad community of researchers and practitioners and there does
 not appear to be much consensus to date. However, there seems a general understanding
-that data science focuses on the more "active" elements—data wrangling, cleaning, and
+that data science focuses on the more "active" elements&mdash;data wrangling, cleaning, and
 analysis&mdash;of answering questions with data. These elements are often highly
 problem-specific and may seem difficult to generalize across applications. Nevertheless, over time we
 have seen some core elements emerge that appear to repeat themselves as useful concepts
