Added instructions for installing miniconda on ARM architecture macs
Closes #414

--- a/setup.Rmd
+++ b/setup.Rmd
@@ -73,10 +73,22 @@ by opening the Start Menu and searching for the program called
 When this opens, you will see a prompt similar to 
 `(base) C:\Users\your_name`. 
 
-**MacOS:** To install miniconda on MacOS, download 
+**MacOS:** To install miniconda on MacOS, you will need to use a different 
+installation method depending on the type of processor chip your laptop has.
+
+If your Mac laptop has an Intel x86 processor chip you can download 
 the [latest Python 64-bit version from here](https://repo.anaconda.com/miniconda/Miniconda3-latest-MacOSX-x86_64.pkg). 
 After the download has finished, run the installer and accept the default 
 configuration for all pages.
+
+If your Mac laptop has an Apple M1 processor chip you can download 
+the [latest Python 64-bit version from here](https://repo.anaconda.com/miniconda/Miniconda3-latest-MacOSX-arm64.sh).
+After the download has finished, you need to run the downloaded script in the terminal. 
+Most laptops will save this to the `Downloads` folder. If this is the case for yours you can run the script in the terminal by typing:
+
+```
+bash Downloads/Miniconda3-latest-MacOSX-arm64.sh
+```
 
 **Ubuntu:** To install miniconda on Ubuntu, we first download
 the [latest Python 64-bit version from here](https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh). 
