made Mac Arm instruction mirror the ubuntu ones.

--- a/setup.Rmd
+++ b/setup.Rmd
@@ -87,8 +87,23 @@ After the download has finished, you need to run the downloaded script in the te
 Most laptops will save this to the `Downloads` folder. If this is the case for yours you can run the script in the terminal by typing:
 
 ```
-bash Downloads/Miniconda3-latest-MacOSX-arm64.sh
+bash path/to/Miniconda3-latest-MacOSX-arm64.sh
 ```
+
+> **Note:** Most often, this file is downloaded to the Downloads directory, 
+and thus the command will look like this:
+>
+> ```
+> bash Downloads/Miniconda3-latest-MacOSX-arm64.sh
+> ```
+
+The instructions for the installation will then appear:
+
+(1) Press Enter.
+(2) Once the license agreement shows, you can press space scroll down or press `q` to skip reading it.
+(3) Type `yes` and press enter to accept the license agreement.
+(4) Press Enter to accept the default installation location.
+(5) Type `yes` and press enter to instruct the installer to run `conda init`, which makes `conda` available from the terminal.
 
 **Ubuntu:** To install miniconda on Ubuntu, we first download
 the [latest Python 64-bit version from here](https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh). 
@@ -106,15 +121,13 @@ and thus the command will look like this:
 > bash Downloads/Miniconda3-latest-Linux-x86_64.sh
 > ```
 
-
 The instructions for the installation will then appear:
 
 (1) Press Enter.
 (2) Once the license agreement shows, you can press space scroll down or press `q` to skip reading it.
 (3) Type `yes` and press enter to accept the license agreement.
 (4) Press Enter to accept the default installation location.
-(5) Type `yes` and press enter to instruct the installer to run `conda init`, which makes `conda` available from the terminal/shell.
-
+(5) Type `yes` and press enter to instruct the installer to run `conda init`, which makes `conda` available from the terminal.
 
 ### JupyterLab
 
